Add main files (*not* currently working)

--- a/comic.css
+++ b/comic.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*
-  @file Holds ALL styles for Spiral Paint Mode
+  @file Holds ALL styles for Comic Paint Mode
 */
 body {
   margin: 0;
