--- a/comic.css
+++ b/comic.css
@@ -22,6 +22,11 @@ fieldset#control {
   padding-bottom: 0;
 }
 
+#repeattimes {
+  width: 5em;
+  float: right;
+}
+
 #control button {
   display: block;
   float: left;
